--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,51 +9,147 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="images/fabicon.png" type="image/x-icon" />
     <!-- font awesome icons -->
-    <script
-      src="https://kit.fontawesome.com/95ec25044e.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/95ec25044e.js" crossorigin="anonymous"></script>
     <!-- main css stylesheet -->
     <link rel="stylesheet" href="styles/style.css" />
-  </head>
-  <body>
+</head>
+
+<body>
     <!-- header section start -->
     <header>
-      <nav>
-        <div class="navigations">
-          <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#players">Players</a></li>
-            <li><a href="#highlights">Highlights</a></li>
-          </ul>
-        </div>
-        <div class="login-button">
-          <a class="btn" href="#"><i class="fas fa-sign-in-alt"></i>Login</a>
-        </div>
-      </nav>
+        <nav>
+            <div class="navigations">
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#players">Players</a></li>
+                    <li><a href="#highlights">Highlights</a></li>
+                </ul>
+            </div>
+            <div class="login-button">
+                <a class="btn" href="#"><i class="fas fa-sign-in-alt"></i>Login</a>
+            </div>
+        </nav>
     </header>
     <!-- header section end -->
 
     <!-- main section start -->
     <main>
-      <!-- hero section start -->
-      <section class="hero">
-        <div class="hero-details">
-          <h1>Conmebol <br />Copa America <br />2021</h1>
-          <a class="btn" href="#"
-            >Watch Live<i class="fas fa-arrow-right"></i
-          ></a>
-        </div>
-        <div class="hero-banner">
-          <img src="images/banner.png" alt="hero-banner" />
-        </div>
-      </section>
-      <!-- hero section end -->
+        <!-- hero section start -->
+        <section class="hero">
+            <div class="hero-details">
+                <h1>Conmebol <br />Copa America <br />2021</h1>
+                <a class="btn" href="#">Watch Live<i class="fas fa-arrow-right"></i></a>
+            </div>
+            <div class="hero-banner">
+                <img src="images/banner.png" alt="hero-banner" />
+            </div>
+        </section>
+        <!-- hero section end -->
 
-      <!-- players section start -->
-      
-      <!-- players section End -->
+        <!-- players section start -->
+        <section class="players-container">
+            <div class="players">
+                <div class="player-cards">
+                    <div class="player">
+                        <img src="images/players/player-1.png" alt="player-img">
+                        <h2>Neymar Jr</h2>
+                        <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer who
+                            plays as a forward for Ligue 1.</p>
+                    </div>
+                </div>
+                <div class="player-cards">
+                    <div class="player">
+                        <img src="images/players/player-2.png" alt="player-img">
+                        <h2>Lionel Messi</h2>
+                        <p>Lionel Andrés Messi is an Argentine professional footballer who plays as a forward and
+                            captains the Argentina national team.</p>
+                    </div>
+                </div>
+                <div class="player-cards">
+                    <div class="player">
+                        <img src="images/players/player-3.png" alt="player-img">
+                        <h2>Christiano Ronaldo</h2>
+                        <p>Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese professional footballer who
+                            plays as a forward for Juventus.</p>
+                    </div>
+                </div>
+                <div class="player-cards">
+                    <div class="player">
+                        <img src="images/players/player-4.png" alt="player-img">
+                        <h2>Paulo Dybala</h2>
+                        <p>Paulo Exequiel Dybala is an Argentine professional footballer who plays as a forward for
+                            Serie A club Juventus and the Argentina.</p>
+                    </div>
+                </div>
+                <div class="player-cards">
+                    <div class="player">
+                        <img src="images/players/player-5.png" alt="player-img">
+                        <h2>Mesut Ozil</h2>
+                        <p>Mesut Özil is a German professional footballer who plays as an attacking midfielder for Süper
+                            Lig club Fenerbahçe.</p>
+                    </div>
+                </div>
+                <div class="player-cards">
+                    <div class="player">
+                        <img src="images/players/player-6.png" alt="player-img">
+                        <h2>Mauro Icardi</h2>
+                        <p>Mauro Emanuel Icardi is an Argentine professional footballer who plays as a striker for club
+                            Paris Saint-Germain and the Argentina</p>
+                    </div>
+                </div>
+                <div class="player-cards">
+                    <div class="player">
+                        <img src="images/players/player-7.png" alt="player-img">
+                        <h2>Angel Di Maria</h2>
+                        <p>Ángel Fabián Di María is an Argentine professional footballer who plays for Ligue 1 club
+                            Paris Saint-Germain and the Argentina.</p>
+                    </div>
+                </div>
+                <div class="player-cards">
+                    <div class="player">
+                        <img src="images/players/player-8.png" alt="player-img">
+                        <h2>Kylian Mbappé</h2>
+                        <p>Kylian Mbappé Lottin is a French professional footballer who plays as a forward for Ligue 1
+                            club Paris Saint-Germain and the France.</p>
+                    </div>
+                </div>
+                <div class="player-cards">
+                    <div class="player">
+                        <img src="images/players/player-9.png" alt="player-img">
+                        <h2>Mohamed Salah</h2>
+                        <p>Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer who plays as a
+                            forward for Premier League club Liverpool.</p>
+                    </div>
+                </div>
+                <div class="player-cards">
+                    <div class="player">
+                        <img src="images/players/player-10.png" alt="player-img">
+                        <h2>Harry Kane</h2>
+                        <p>Harry Edward Kane MBE is an English professional footballer who plays as a striker for
+                            Premier League club Tottenham Hotspur and England.</p>
+                    </div>
+                </div>
+                <div class="player-cards">
+                    <div class="player">
+                        <img src="images/players/player-11.png" alt="player-img">
+                        <h2>Kevin De Bruyne</h2>
+                        <p>Kevin De Bruyne is a Belgian professional footballer who plays as a midfielder for Premier
+                            League club Manchester City and the Belgium.</p>
+                    </div>
+                </div>
+                <div class="player-cards">
+                    <div class="player">
+                        <img src="images/players/player-12.png" alt="player-img">
+                        <h2>Philippe Coutinho</h2>
+                        <p>Philippe Coutinho Correia is a Brazilian professional footballer who plays as an attacking
+                            midfielder or winger for Barcelona and the Brazil.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- players section End -->
     </main>
     <!-- main section end -->
-  </body>
+</body>
+
 </html>
