Highlights Section Added

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
     <!-- main section start -->
     <main>
         <!-- hero section start -->
-        <section class="hero">
-            <div class="hero-details">
+        <section class="hero flexible">
+            <div class="hero-details flexible-details">
                 <h1>Conmebol <br />Copa America <br />2021</h1>
                 <a class="btn" href="#">Watch Live<i class="fas fa-arrow-right"></i></a>
             </div>
-            <div class="hero-banner">
+            <div class="hero-banner flexible-banner">
                 <img src="images/banner.png" alt="hero-banner" />
             </div>
         </section>
@@ -148,6 +148,19 @@
             </div>
         </section>
         <!-- players section End -->
+
+        <!-- Highlights section start -->
+        <section class="highlights flexible">
+            <div class="highlight-details flexible-details">
+                <h2>All Highlights <br>Copa America 2021</h2>
+                <p>Argentina’s winning goal at the Maracana Stadium in <br> Rio de Janeiro came in the 22nd minute after Rodrigo de <br> Paul made a long pass to Angel di Maria. The 33-year-old<br>  veteran striker counted.</p>
+                <a class="btn" href="#">Watch Now<i class="fas fa-arrow-right"></i></a>
+            </div>
+            <div class="highlight-banner flexible-banner">
+                <img src="images/match.jpg" alt="highlight-banner">
+            </div>
+        </section>
+        <!-- Highlights section End -->
     </main>
     <!-- main section end -->
 </body>
