--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </ul>
             </div>
             <div class="login-button">
-                <a class="btn" href="#"><i class="fas fa-sign-in-alt"></i>Login</a>
+                <a target="_blank" class="btn" href="https://www.w3.org/Provider/Style/dummy.html"><i class="fas fa-sign-in-alt"></i>Login</a>
             </div>
         </nav>
     </header>
@@ -38,7 +38,7 @@
         <section class="hero flexible">
             <div class="hero-details flexible-details">
                 <h1>Conmebol <br />Copa America <br />2021</h1>
-                <a class="btn" href="#">Watch Live<i class="fas fa-arrow-right"></i></a>
+                <a target="_blank" class="btn" href="https://www.w3.org/Provider/Style/dummy.html">Watch Live<i class="fas fa-arrow-right"></i></a>
             </div>
             <div class="hero-banner flexible-banner">
                 <img src="images/banner.png" alt="hero-banner" />
@@ -49,7 +49,7 @@
         <!-- players section start -->
         <section class="players-container">
             <div class="players">
-                <div class="player-cards">
+                <div class="player-cards cards">
                     <div class="player">
                         <img src="images/players/player-1.png" alt="player-img">
                         <h2>Neymar Jr</h2>
@@ -57,7 +57,7 @@
                             plays as a forward for Ligue 1.</p>
                     </div>
                 </div>
-                <div class="player-cards">
+                <div class="player-cards cards">
                     <div class="player">
                         <img src="images/players/player-2.png" alt="player-img">
                         <h2>Lionel Messi</h2>
@@ -65,7 +65,7 @@
                             captains the Argentina national team.</p>
                     </div>
                 </div>
-                <div class="player-cards">
+                <div class="player-cards cards">
                     <div class="player">
                         <img src="images/players/player-3.png" alt="player-img">
                         <h2>Christiano Ronaldo</h2>
@@ -73,7 +73,7 @@
                             plays as a forward for Juventus.</p>
                     </div>
                 </div>
-                <div class="player-cards">
+                <div class="player-cards cards">
                     <div class="player">
                         <img src="images/players/player-4.png" alt="player-img">
                         <h2>Paulo Dybala</h2>
@@ -81,7 +81,7 @@
                             Serie A club Juventus and the Argentina.</p>
                     </div>
                 </div>
-                <div class="player-cards">
+                <div class="player-cards cards">
                     <div class="player">
                         <img src="images/players/player-5.png" alt="player-img">
                         <h2>Mesut Ozil</h2>
@@ -89,7 +89,7 @@
                             Lig club Fenerbahçe.</p>
                     </div>
                 </div>
-                <div class="player-cards">
+                <div class="player-cards cards">
                     <div class="player">
                         <img src="images/players/player-6.png" alt="player-img">
                         <h2>Mauro Icardi</h2>
@@ -97,7 +97,7 @@
                             Paris Saint-Germain and the Argentina</p>
                     </div>
                 </div>
-                <div class="player-cards">
+                <div class="player-cards cards">
                     <div class="player">
                         <img src="images/players/player-7.png" alt="player-img">
                         <h2>Angel Di Maria</h2>
@@ -105,7 +105,7 @@
                             Paris Saint-Germain and the Argentina.</p>
                     </div>
                 </div>
-                <div class="player-cards">
+                <div class="player-cards cards">
                     <div class="player">
                         <img src="images/players/player-8.png" alt="player-img">
                         <h2>Kylian Mbappé</h2>
@@ -113,7 +113,7 @@
                             club Paris Saint-Germain and the France.</p>
                     </div>
                 </div>
-                <div class="player-cards">
+                <div class="player-cards cards">
                     <div class="player">
                         <img src="images/players/player-9.png" alt="player-img">
                         <h2>Mohamed Salah</h2>
@@ -121,7 +121,7 @@
                             forward for Premier League club Liverpool.</p>
                     </div>
                 </div>
-                <div class="player-cards">
+                <div class="player-cards cards">
                     <div class="player">
                         <img src="images/players/player-10.png" alt="player-img">
                         <h2>Harry Kane</h2>
@@ -129,7 +129,7 @@
                             Premier League club Tottenham Hotspur and England.</p>
                     </div>
                 </div>
-                <div class="player-cards">
+                <div class="player-cards cards">
                     <div class="player">
                         <img src="images/players/player-11.png" alt="player-img">
                         <h2>Kevin De Bruyne</h2>
@@ -137,7 +137,7 @@
                             League club Manchester City and the Belgium.</p>
                     </div>
                 </div>
-                <div class="player-cards">
+                <div class="player-cards cards">
                     <div class="player">
                         <img src="images/players/player-12.png" alt="player-img">
                         <h2>Philippe Coutinho</h2>
@@ -153,16 +153,160 @@
         <section class="highlights flexible">
             <div class="highlight-details flexible-details">
                 <h2>All Highlights <br>Copa America 2021</h2>
-                <p>Argentina’s winning goal at the Maracana Stadium in <br> Rio de Janeiro came in the 22nd minute after Rodrigo de <br> Paul made a long pass to Angel di Maria. The 33-year-old<br>  veteran striker counted.</p>
-                <a class="btn" href="#">Watch Now<i class="fas fa-arrow-right"></i></a>
+                <p>Argentina’s winning goal at the Maracana Stadium in <br> Rio de Janeiro came in the 22nd minute after
+                    Rodrigo de <br> Paul made a long pass to Angel di Maria. The 33-year-old<br> veteran striker
+                    counted.</p>
+                <a target="_blank" class="btn" href="https://www.w3.org/Provider/Style/dummy.html">Watch Now<i class="fas fa-arrow-right"></i></a>
             </div>
             <div class="highlight-banner flexible-banner">
                 <img src="images/match.jpg" alt="highlight-banner">
             </div>
         </section>
         <!-- Highlights section End -->
+
+        <!-- News section Start -->
+        <section class="news-letter">
+            <h2 class="section-header">Latest News</h2>
+           <div class="news-box">
+            <article class="news cards">
+                <img class="news-banner" src="images/news-banner/news-1.jpg" alt="news-banner">
+                <div class="news-details">
+                    <h2>Chilli lost the match</h2>
+                    <p class="author">By <span><a href="#">Carlo Martin</a></span></p>
+                    <p>Miguel Almiron got a goal and an assist as Paraguay beat Chile 2-0 in the Copa America on Thursday and confirmed their place in the last eight. <a href="#">See more</a></p>
+                </div>
+            </article>
+            <article class="news cards">
+                <img class="news-banner" src="images/news-banner/news-2.jpg" alt="news-banner">
+                <div class="news-details">
+                    <h2>Maracana is hitting up!</h2>
+                    <p class="author">By <span><a href="#">Sanchez Costa</a></span></p>
+                    <p>Europe might be waiting for England versus Italy in Sunday’s Euro 2020 showpiece but there is an even bigger match to look forward to in South America <a href="#">See more</a></p>
+                </div>
+            </article>
+            <article class="news cards">
+                <img class="news-banner" src="images/news-banner/news-3.jpg" alt="news-banner">
+                <div class="news-details">
+                    <h2>Messi breaking  record</h2>
+                    <p class="author">By <span><a href="#">David Miller</a></span></p>
+                    <p>In the accounts of the specialized press, the King of Football scored 643 in competitions and the 448 goals scored in matches and friendly. Surprassing Pele <a href="#">See more</a></p>
+                </div>
+            </article>
+           </div>
+        </section>
+        <!-- News section end -->
+
+        <!-- Products Section Start -->
+        <section class="products-container">
+            <h2>Buy our Merchedises</h2>
+            <div class="products">
+                <div class="product cards">
+                   <div class="product-banner">
+                    <img src="images/items/item-1.png" alt="product-banner">
+                   </div>
+                   <div class="product-details">
+                       <h3>Argentina Home Jersey</h3>
+                       <p><i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star unfilled"></i></p>
+                        <p class="product-price">110.99$</p>
+                        <a target="_blank" class="buy-button btn" href="https://www.w3.org/Provider/Style/dummy.html">Add to cart</a>
+                   </div>
+                </div>
+                <div class="product cards">
+                   <div class="product-banner">
+                    <img src="images/items/item-2.png" alt="product-banner">
+                   </div>
+                   <div class="product-details">
+                       <h3>Brazli Home Jersey</h3>
+                       <p><i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star unfilled"></i>
+                        <i class="fas fa-star unfilled"></i></p>
+                        <p class="product-price">100.79$</p>
+                        <a target="_blank" class="buy-button btn" href="https://www.w3.org/Provider/Style/dummy.html">Add to cart</a>
+                   </div>
+                </div>
+                <div class="product cards">
+                   <div class="product-banner">
+                    <img src="images/items/item-3.png" alt="product-banner">
+                   </div>
+                   <div class="product-details">
+                       <h3>Mexico Jersey Kit</h3>
+                       <p><i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star unfilled"></i></p>
+                        <p class="product-price">109.98$</p>
+                        <a target="_blank" class="buy-button btn" href="https://www.w3.org/Provider/Style/dummy.html">Add to cart</a>
+                   </div>
+                </div>
+                <div class="product cards">
+                   <div class="product-banner">
+                    <img src="images/items/item-4.jpg" alt="product-banner">
+                   </div>
+                   <div class="product-details">
+                       <h3>Addidas Kit Bag</h3>
+                       <p><i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star unfilled"></i>
+                        <i class="fas fa-star unfilled"></i>
+                        <i class="fas fa-star unfilled"></i></p>
+                        <p class="product-price">40.29$</p>
+                        <a target="_blank" class="buy-button btn" href="https://www.w3.org/Provider/Style/dummy.html">Add to cart</a>
+                   </div>
+                </div>
+                <div class="product cards">
+                   <div class="product-banner">
+                    <img src="images/items/item-5.jpg" alt="product-banner">
+                   </div>
+                   <div class="product-details">
+                       <h3>Soccer Boots</h3>
+                       <p><i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star unfilled"></i></p>
+                        <p class="product-price">58.79$</p>
+                        <a target="_blank" class="buy-button btn" href="https://www.w3.org/Provider/Style/dummy.html">Add to cart</a>
+                   </div>
+                </div>
+                <div class="product cards">
+                   <div class="product-banner">
+                    <img src="images/items/item-6.jpg" alt="product-banner">
+                   </div>
+                   <div class="product-details">
+                       <h3>Sports Cap</h3>
+                       <p><i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star filled"></i>
+                        <i class="fas fa-star unfilled"></i>
+                        <i class="fas fa-star unfilled"></i></p>
+                        <p class="product-price">38.99$</p>
+                        <a target="_blank" class="buy-button btn" href="https://www.w3.org/Provider/Style/dummy.html">Add to cart</a>
+                   </div>
+                </div>
+            </div>
+        </section>
+        <!-- Products Section End -->
     </main>
     <!-- main section end -->
+    <footer>
+        <div class="footer-logo">
+            <img src="images/Logo.png" alt="logo">
+        </div>
+        <div class="social-links">
+            <a target="_blank" href="https://twitter.com/?lang=en"><i class="fab fa-twitter"></i></a>
+            <a target="_blank" href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+            <a target="_blank" href="https://dribbble.com/"><i class="fab fa-dribbble"></i></a>
+            <a target="_blank" href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
+        </div>
+        <p>Copyright &copy; 2022 Football Mania</p>
+    </footer>
 </body>
 
 </html>
