--- a/index.html
+++ b/index.html
@@ -295,6 +295,7 @@
         <!-- Products Section End -->
     </main>
     <!-- main section end -->
+    <!-- footer section start -->
     <footer>
         <div class="footer-logo">
             <img src="images/Logo.png" alt="logo">
@@ -307,6 +308,7 @@
         </div>
         <p>Copyright &copy; 2022 Football Mania</p>
     </footer>
+    <!-- footer section end -->
 </body>
 
 </html>
