Live section added

--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
             </div>
         </section>
         <!-- hero section end -->
-
+    <!------------------------>
+        <iframe allowfullscreen='true' frameborder='0' height='500px' scrolling='1' src='https://online.alkoora.live/albaplayer/on-time-sport-1/' width='100%'></iframe>
+        
+        
         <!-- players section start -->
         <section class="players-container">
             <div class="players">
