--- a/index.html
+++ b/index.html
@@ -30,10 +30,7 @@
           </ul>
         </div>
         <div class="login-button">
-          <a
-            target="_blank"
-            class="btn"
-            href="https://www.w3.org/Provider/Style/dummy.html"
+          <a target="_blank" class="btn" href="#"
             ><i class="fas fa-sign-in-alt"></i>Login</a
           >
         </div>
@@ -50,7 +47,7 @@
           <a
             target="_blank"
             class="btn"
-            href="https://www.w3.org/Provider/Style/dummy.html"
+            href="#live"
             >Watch Live<i class="fas fa-arrow-right"></i
           ></a>
         </div>
@@ -61,6 +58,7 @@
       <!-- hero section end -->
       <!------------------------>
       <iframe
+        id="live"
         allowfullscreen="true"
         frameborder="100"
         height="600px"
