--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
         allowfullscreen="true"
         frameborder="100"
         height="600px"
-        scrolling="1"
-        src="https://online.alkoora.live/albaplayer/ontime-sport-3/"
+        scrolling="1"     src="https://onlines.alkoora.live/albaplayer/on-time-sport-1/"
         width="80%"
       ></iframe>
       <!-- players section start -->
