--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <!-- hero section start -->
       <section class="hero flexible">
         <div class="hero-details flexible-details">
-          <h1>Conmebol <br />Copa America <br />2021</h1>
+          <h1>LaLiga <br />El Classico <br />Barcelona vs Real Madrid</h1>
           <a
             target="_blank"
             class="btn"
