--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         height="600px"
         scrolling="1"     src="https://www.youtube.com/embed/b60yBOVnt9Y?si=iFn3GnZrTHpxmJId"
         width="80%"
+        allow = "autoplay"
       ></iframe>
       <!-- players section start -->
       <section class="players-container">
