--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         width="80%"
         allow = "autoplay"
       ></iframe>
+<h3>_STEALTH</h3>
       <!-- players section start -->
       <section class="players-container">
         <div class="players">
