--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <h1>Ballon D'OR <br /> 2023 <br /> Messi Legacy continues</h1>
           <a
             class="btn"
-            href="https://shootz.yalla-shoot-tv.live/albaplayer/bein4/"
+            href="#live"
             >Watch Live<i class="fas fa-arrow-right"></i
           ></a>
         </div>
@@ -61,7 +61,7 @@
         allowfullscreen="true"
         frameborder="100"
         height="600px"
-        scrolling="1"     src="https://shootz.yalla-shoot-tv.live/albaplayer/bein4/"
+        scrolling="1"     src="https://shootz.yalla-shoot-tv.live/albaplayer/bein1/"
         width="80%"
         allow = "autoplay"
       ></iframe>
