--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         allowfullscreen="true"
         frameborder="100"
         height="600px"
-        scrolling="1"     src="https://shootz.yalla-shoot-tv.live/albaplayer/bein1/"
+        scrolling="1"     src="https://www.yallashoot.io/p/beiiin1.html"
         width="80%"
         allow = "autoplay"
       ></iframe>
